Add repo link to manifest.json

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,4 +1,5 @@
 {
     "name": "InContext - Shows Random Example Sentences",
-    "package": "incontext"
+    "package": "incontext",
+    "homepage": "https://github.com/abdnh/anki-incontext"
 }
