Update name in manifest.json

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "InContext - Shows Random Example Sentences",
+    "name": "InContext - Learn vocabulary in context",
     "package": "incontext",
     "homepage": "https://github.com/abdnh/anki-incontext"
 }
