--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,1 @@
-{
-    "name": "InContext - Learn vocabulary in context",
-    "package": "incontext",
-    "homepage": "https://github.com/abdnh/anki-incontext"
-}
+{"name": "InContext - Learn vocabulary in context", "homepage": "https://github.com/abdnh/anki-incontext", "package": "incontext", "conflicts": []}
