--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ anki==2.1.49
 aqt==2.1.49
 requests==2.28.1
 beautifulsoup4==4.11.1
-ankibuild
-git+https://github.com/abdnh/ankibuild@54a837d942859aaa9512ffe7b27b483959d75d64#egg=ankibuild[qt5,qt6]
 black==22.6.0
 mypy==0.961
+isort==5.10.1
+ankibuild
+git+https://github.com/abdnh/ankibuild@54a837d942859aaa9512ffe7b27b483959d75d64#egg=ankibuild[qt5,qt6]
