--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ beautifulsoup4==4.11.1
 black==22.6.0
 mypy==0.961
 isort==5.10.1
+pylint==2.14.4
 ankibuild
 git+https://github.com/abdnh/ankibuild@54a837d942859aaa9512ffe7b27b483959d75d64#egg=ankibuild[qt5,qt6]
