Use pycountry for language codes

--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,7 @@ no_strict_optional = true
 show_error_codes = true
 check_untyped_defs = True
 disallow_untyped_defs = True
-exclude = venv|ankiprofile|tmp|build
+exclude = venv|ankiprofile|tmp|build|submodules|vendor
 
 [mypy-src.forms.*]
 ignore_errors = True
@@ -18,4 +18,7 @@ ignore_missing_imports = True
 
 [mypy-PyQt6.*]
 ignore_errors = True
+ignore_missing_imports = True
+
+[mypy-pycountry.*]
 ignore_missing_imports = True
