--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,10 @@ anki==2.1.49
 aqt==2.1.49
 requests==2.28.1
 types-requests==2.28.0
+# TODO: Use 22.3.6 version from pypi once it's released to fix this issue: https://github.com/flyingcircusio/pycountry/pull/52
+# Do not forget to also simplify the packaging code and remove the git submodule
+pycountry
+git+https://github.com/flyingcircusio/pycountry@e2352cc16c7bd2c3190f56507b4321a57177a7ef
 beautifulsoup4==4.11.1
 black==22.6.0
 mypy==0.961
