--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,7 @@ no_strict_optional = true
 show_error_codes = true
 check_untyped_defs = True
 disallow_untyped_defs = True
-exclude = venv|ankiprofile|tmp|build|submodules|vendor
+exclude = venv|ankidata|tmp|build|submodules|vendor
 
 [mypy-src.forms.*]
 ignore_errors = True
