--- a/.pylintrc
+++ b/.pylintrc
@@ -1,28 +1,32 @@
 [MASTER]
 extension-pkg-whitelist=PyQt6,PyQt5
-ignore-paths = venv|ankidata|src/forms|src/providers/vendor
+ignore = venv|ankidata|vendor|forms
 
 [REPORTS]
 output-format=colorized
 
 [MESSAGES CONTROL]
 disable=
+  line-too-long,
+  too-many-lines,
+  missing-function-docstring,
   missing-module-docstring,
   missing-class-docstring,
-  missing-function-docstring,
-  wildcard-import,
-  unused-wildcard-import,
-  unused-argument,
-  redefined-outer-name,
+  import-outside-toplevel,
+  wrong-import-position,
+  wrong-import-order,
   fixme,
-  line-too-long,
-  invalid-name,
+  unused-wildcard-import,
   attribute-defined-outside-init,
+  redefined-builtin,
+  wildcard-import,
+  broad-except,
   bare-except,
-  too-many-arguments,
+  unused-argument,
+  unused-variable,
+  redefined-outer-name,
   global-statement,
-
-[BASIC]
-good-names =
-  i,
-  mw,
+  protected-access,
+  arguments-renamed,
+  consider-using-f-string,
+  invalid-name
