Add option to paste sentences to a chosen field

--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,6 @@
 {
     "lang_field": "English",
-    "provider_field": "All"
+    "provider_field": "All",
+    "word_field": "",
+    "sentences_field": ""
 }
