Update from add-on template

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,22 @@
 __pycache__/
-venv/
-.mypy_cache/
-ankidata/
+*.py[oc]
+*.egg-info/
 build/
+dist/
+wheels/
+.venv/
+.mypy_cache/
+.pytest_cache/
+htmlcov/
+.coverage
+ankidata/
 src/manifest.json
 src/meta.json
 src/forms/
 src/user_files/*/
-src/providers/vendor/
 src/user_files/**/*.db
 src/user_files/**/*.tsv
-src/meta.json
-src/manifest.json
+src/bin/
+vendor/
+node_modules/
 TODO.md
-tmp/
