--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -18,24 +18,27 @@ jobs:
                   submodules: recursive
                   fetch-depth: 0
 
-            - name: Setup Python
-              uses: actions/setup-python@v4
+            - name: Install uv
+              uses: astral-sh/setup-uv@v5
+
+            - name: Set up Python
+              uses: actions/setup-python@v5
               with:
-                  python-version: 3.9
+                  python-version-file: ".python-version"
 
             - name: Install dependencies
-              run: python -m pip install -r requirements_dev.txt
+              run: .github/workflows/install_deps.sh
 
             - name: Create packages
-              run: make
+              run: make vendor && make ankiweb
 
             - name: Extract changes
               shell: bash
               run: |
-                  python .github/workflows/extract_changes.py ${{ github.ref }} > build/RELEASE.md
+                  uv run -- python -m ankiscripts.changes ${{ github.ref }} > build/RELEASE.md
 
             - name: Release
-              uses: softprops/action-gh-release@v1
+              uses: softprops/action-gh-release@v2
               if: startsWith(github.ref, 'refs/tags/')
               with:
                   files: build/*.ankiaddon
