--- a/.vscode.dist/settings.json
+++ b/.vscode.dist/settings.json
@@ -1,10 +1,13 @@
 {
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-        "source.organizeImports": true
-    },
-    "python.formatting.provider": "black",
     "[html]": {
         "editor.formatOnSave": false
-    }
+    },
+    "editor.defaultFormatter": "dprint.dprint",
+    "[python]": {
+        "editor.defaultFormatter": "charliermarsh.ruff"
+    },
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": "explicit"
+    },
+    "editor.formatOnSave": true
 }
