--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,14 +27,24 @@ jobs:
               with:
                   python-version-file: ".python-version"
 
+            - name: Set up node
+              uses: actions/setup-node@v5
+              with:
+                  node-version: latest
+
             - name: Install dependencies
               run: .github/workflows/install_deps.sh
 
+            - name: Install just
+              uses: extractions/setup-just@v3
+
             - name: Build
-              run: make vendor && make ankiweb
+              run: just vendor && just ankiweb
 
             - name: Run checks
-              run: uv run -- pre-commit run --all-files
+              run: |
+                  uv run -- pre-commit run --all-files
+                  just ts-check
 
             - name: Run tests
-              run: make test
+              run: just test
