--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -26,11 +26,19 @@ jobs:
               with:
                   python-version-file: ".python-version"
 
+            - name: Set up node
+              uses: actions/setup-node@v5
+              with:
+                  node-version: latest
+
             - name: Install dependencies
               run: .github/workflows/install_deps.sh
 
+            - name: Install just
+              uses: extractions/setup-just@v3
+
             - name: Create packages
-              run: make vendor && make ankiweb
+              run: just vendor && just ankiweb
 
             - name: Extract changes
               shell: bash
