--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
           - id: trailing-whitespace
           - id: end-of-file-fixer
           - id: check-json
-            exclude: ".vscode(.dist)?/.*"
+            exclude: "(.vscode(.dist)?/.*|tsconfig.json)"
           - id: check-yaml
           - id: check-builtin-literals
           - id: check-case-conflict
