--- a/.vscode.dist/launch.json
+++ b/.vscode.dist/launch.json
@@ -10,7 +10,9 @@
             "justMyCode": true,
             "args": ["-b", "ankidata"],
             "env": {
-                "REPORT_ERRORS": "0"
+                "REPORT_ERRORS": "0",
+                "INCONTEXT_HMR": "1",
+                "INCONTEXT_API_PORT": "40001"
             }
         }
     ]
