--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,6 +42,12 @@ repos:
             entry: dprint fmt --allow-no-files
             language: system
             require_serial: true
+          - id: vermin
+            name: vermin
+            entry: python -m ankiscripts.vermin
+            language: system
+            types: [python]
+            require_serial: true
 
 ci:
     autoupdate_schedule: weekly
