--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
     "lang_field": "English",
-    "provider_field": "All",
+    "provider_field": [],
     "report_errors": true,
     "sentences_field": "",
     "word_field": ""
