Fix default lang_field value

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-    "lang_field": "English",
+    "lang_field": "eng",
     "provider_field": [],
     "report_errors": true,
     "sentences_field": "",
