--- a/ts/package.json
+++ b/ts/package.json
@@ -23,6 +23,7 @@
         "@sveltejs/adapter-static": "^3.0.9",
         "@sveltejs/kit": "^2.22.0",
         "@sveltejs/vite-plugin-svelte": "^6.0.0",
+        "@types/bootstrap": "^5.2.10",
         "@types/node": "^24.3.1",
         "@vitest/browser": "^3.2.3",
         "eslint": "^9.18.0",
