--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
                   node-version: latest
 
             - name: Install dependencies
-              run: .github/workflows/install_deps.sh
+              run: uv run -- python -m ankiscripts.install_ci_deps
 
             - name: Install just
               uses: extractions/setup-just@v3
@@ -42,9 +42,7 @@ jobs:
               run: just vendor && just ankiweb
 
             - name: Run checks
-              run: |
-                  uv run -- pre-commit run --all-files
-                  just ts-check
+              run: uv run -- pre-commit run --all-files
 
             - name: Run tests
               run: just test
