Allow assigning search shortcuts

--- a/src/config.json
+++ b/src/config.json
@@ -3,5 +3,6 @@
     "provider_field": [],
     "report_errors": true,
     "sentences_field": "",
-    "word_field": ""
+    "word_field": "",
+    "search_shortcuts": []
 }
