--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ tdk = { git = "https://github.com/abdnh/tdk", branch = "master" }
 dev = [
     "ankiscripts[forms]",
     "ankiutils",
-    "aqt[qt]>=25.2.4",
+    "aqt[qt]",
     "mypy>=1.15.0",
     "pre-commit>=4.2.0",
     "pytest>=8.3.5",
