--- a/.vscode.dist/settings.json
+++ b/.vscode.dist/settings.json
@@ -14,11 +14,5 @@
     "editor.codeActionsOnSave": {
         "source.organizeImports": "explicit"
     },
-    "editor.formatOnSave": true,
-    "[json]": {
-        "editor.defaultFormatter": "dprint.dprint"
-    },
-    "[svelte]": {
-        "editor.defaultFormatter": "dprint.dprint"
-    }
+    "editor.formatOnSave": true
 }
