Update from template

--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,12 +1,12 @@
-_commit: 0.0.3-15-gfa0dcd1
+_commit: 0.0.3-22-g1633a5b
 _src_path: https://github.com/abdnh/anki-addon-template
 add_author_support_links: true
-ankiweb_id: '385420176'
+ankiweb_id: "385420176"
 author: Abdo
 docs_page: https://abdnh.github.io/anki-incontext
 email: abdo@abdnh.com
-forums_page: forums.ankiweb.net/t/incontext-learn-vocabulary-in-context-with-random-sentences/24017
-github_page: https://github.com/abdnh/anki-incontext/
+forums_page: https://forums.ankiweb.net/t/incontext-learn-vocabulary-in-context-with-random-sentences/24017
+github_page: https://github.com/abdnh/anki-incontext
 max_point_version: 0
 min_point_version: 50
 package_name: incontext
