--- a/ts/package.json
+++ b/ts/package.json
@@ -25,6 +25,7 @@
         "@sveltejs/adapter-static": "^3.0.9",
         "@sveltejs/kit": "^2.22.0",
         "@sveltejs/vite-plugin-svelte": "^6.0.0",
+        "@tailwindcss/typography": "^0.5.19",
         "@tailwindcss/vite": "^4.1.18",
         "@types/node": "^24.3.1",
         "@vitest/browser": "^3.2.3",
